# zhengbi-yong.github.io

./: .editorconfig  .env  .env.docker.example  .env.local.example  .env.prod-local  .env.production.example  .gitignore  .markdownlint-cli2.jsonc  .npmrc  404.html  58242565dddd1587560f9ba9637b02aeda82a37f-eebb5e57abe44ab2d19d.js  58242565dddd1587560f9ba9637b02aeda82a37f-eebb5e57abe44ab2d19d.js.map  59a11cd21362353e9876bc83a7cad7f9de60a81f-87c558db798103f11faf.js  59a11cd21362353e9876bc83a7cad7f9de60a81f-87c558db798103f11faf.js.map  5cc5e7bc-8f64b86cdfd3ff206a15.js  5cc5e7bc-8f64b86cdfd3ff206a15.js.map  64eb95619c5d243def4eab5dec972307d32e4631-b024cc1f7884a2cf14d2.js  64eb95619c5d243def4eab5dec972307d32e4631-b024cc1f7884a2cf14d2.js.map  6e66d789d090bd2576698be039198d22f8b72641-da77ef66698a470a2aef.js  6e66d789d090bd2576698be039198d22f8b72641-da77ef66698a470a2aef.js.map  731-035c201543300b42bc59.js  731-035c201543300b42bc59.js.map  7cea21e4-57c8b109856b7acee2c7.js  7cea21e4-57c8b109856b7acee2c7.js.map  843-a102820025abad750532.js  843-a102820025abad750532.js.map  ADDITIONAL_OPTIMIZATIONS.md  ADMIN_CREDENTIALS.md  ADMIN_TEST_REPORT.md  ADMIN_USER_FIX.md  AGENTS.md  APPEARENCE.md  ARCHITECTURE.md  BLOG_WRITING_GUIDE.md  CLAUDE.md  COLOR_CONFIGURATION.md  CONTRIBUTING.md  CROSS_PLATFORM_DEPLOYMENT.md  CROSS_PLATFORM_SUMMARY.md  DEPLOYMENT-TROUBLESHOOTING.md  (+732 more)
backend/: .dockerignore  .env  .env.clean  .env.example  CLAUDE.md  CURRENT_STATUS.md  Cargo.toml  Cargo_health.toml  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT.md  Dockerfile  Makefile  QUICK_START.md  README.md  RUN-NOW.md  SETUP.md  add_ignore.sh  add_ignore_v2.sh  add_ignore_v3.sh  code-review-report.md  create_posts_final.sh  create_test_data.sh  deny.toml  deploy.sh  docker-compose.yml  migrate_mdx.py  phase1_task1.md  phase1_task2.md  quick-start.sh  run-local.sh  run-working-api.sh  rustfmt.toml  setup.sh  setup_database.sh  test_api.sh  test_error_format.sh  test_jwt.rs  verify_data.sh
backend/.cargo/: CLAUDE.md  config.toml
backend/.sqlx/: CLAUDE.md  config.json  config.toml  query-001fe655cd6aaae6066e049264a5723dfc54c6e5692df17d90ba5f832402cc88.json  query-00403a2e628173df04ff52aa60a78697a6655b2fc315b8f8e4262bd508ef4ada.json  query-005b188ea875296a8696808c82ee9fd973c81c9b7c7d23af253c0e39ce9699d6.json  query-021e713bc6d828b48fcf61cc36a2bd14c77eb5844ed6c4e90f34709414da4c22.json  query-0b53db1c47fa5cc4e949ef7d426b11c02e0b9cc909ce0ab8aa6ee078f44e8f0a.json  query-106429a82c46514b28f2e582b519fdfe9ec1f74631010c79137c89ebda85f05f.json  query-120a319e8f6e33f1b6baabb1757c09577099391232adef41d51c41f3721d93de.json  query-1219a1da98d4d20c0ef35bad9ecd5b6c9ec9478954ef8003db53cb155375d2b6.json  query-124d2bb22fb874879e3b2dfc5dde63927d580dc79a41503d4061ebc052bf738f.json  query-175d3a27bd60b18f28aec195373f23ea2342b4fc25d441e8de7f1dfb6fe348ec.json  query-1f1b879b9bae9de3af8b8b35fded2daae6c2465e63cc896ef3cc655d1095887b.json  query-1fda87781fc15512307269178c70bb4ddfedbee0c8b57850ba6d554eab92edfd.json  query-22b809cd883ac00a3ddcb9b06eb30380a149bd748ef7943901ba9854f0152373.json  query-230e0a6fa446f90b3cd29b2b02ec9559c4632254ddb86bd3b8dd9ba8e732288c.json  query-26b9e46958eae01309b7e0f0a247ecef30584f7faebfe5b76d06abd9d795a2a7.json  query-28b29ff89154cd99e7daaa50634bf6c06a6f2fb2cba369a55160b64b4a0cbc12.json  query-2fe1ad28e3712203a7f4633ade6c1c7525f41e6c11c21cc8032f1d1876f2196f.json  query-362ccc6d6a0fc23e99c365b7598f7c03d5154878088bbd7be5705b3c31d06f73.json  query-3730712ddf78ce7c934b3d146434e6784911eda5fa66b06d3dc3cf245ea91b10.json  query-3b7d161ba9975553291acb2d8327e7d73fa794a9072642334476000b04a3631a.json  query-3cace28ae738ddef48347316c36a4f1b26de6719585b137706e7e0d543b56a05.json  query-414cb1f6cfe962b2c4de98e653f3d6dbaa5636fa685f4457748e8ae5d28de48b.json  query-45ee3eac0ff4dd8079e2461eab4d26a12dacf5327c641a3a3a3790a499d489b4.json  query-475dd23e6d7abc1a7a7b052a2cc41152870e7d7a2ffd3518c9a03d585217ac2c.json  query-4e90234188b400654eb8c6b64188821ee6d57d39a2d5dbf8e83f1bd237a78781.json  query-4f517714d9b4890d0103e59b250c8e98ae61c5c0709d709ff1b0282954ee70a8.json  query-50611871759e381427155976a17b1dcaa44ad49904b6515665b279950369a723.json  query-5441b0f966a1ec3c0a93ca564b0664ccb6452e574b899bbe8de82398c26a46ac.json  query-5556a7faeb1a9d8c4eda04cf08acea4d5b2dc1b09331546cb5b3c971290d6952.json  query-5bcf35580826c8d0286ad904e5b4069a50ad30bba8a7522116fb8c904a3e328e.json  query-642652f78afa115f3bae21829e3b61cdf4a4453c9387bfe492edef779d2df175.json  query-66cee1db179841f57e021363cdd1e63ea98a2154a9b08182fa60284aaebd633a.json  query-66ef77716f25e1d1a58b1210d21d5c0a9f35e507725e2dfb0ab34778f759ff34.json  query-685717f1ca5e3cee8db439c3d3ad76ba026ae14ca1e7dc3d429b18dfdbde3f19.json  query-6e28d6cabab2a0c71009e3fad2c29d58e6747d365f4cce8bd1f65188a2168834.json  query-7316b665297e462d6fd2ca98c95a8e9fbbfca53424ff337845925d20f1b9ea68.json  query-7b4935f2d34d940a3de9ee714c25643e0dcbbb9c531c08ba86f868289e7fcce8.json  (+24 more)
backend/docs/: usage.md
backend/migrations/: 0001_initial.sql  0002_fix_column_names.sql  0003_fix_post_likes_column.sql  0004_create_cms_tables.sql  0005_migrate_content_schema.sql  0006_add_user_role.sql  0007_add_comment_likes.sql  0007_cms_tables.sql.bak  0008_performance_indexes.sql.bak  001_initial.sql  20251229_add_reading_progress.sql  20251230_add_fulltext_search.sql  20251231_add_mdx_support.sql  20260116_enhance_posts_schema.sql  2026032201_add_outbox_events.sql  2026032202_add_outbox_claiming.sql  20260322_add_outbox_events.sql  2026032901_add_title_exact_lookup_index.sql  2026033101_post_media.sql  2026033102_user_status.sql  2026040601_create_team_members.sql  2026040901_uuidv7_migration.sql  2026040902_hot_optimization.sql  2026040903_soft_delete_indexes.sql  2026041301_add_password_reset_tokens.sql  2026041501_fix_db_violations_v2.sql  2026041501_fix_db_violations_v3.sql  2026041601_add_content_tracks.sql  2026042701_create_articles.sql  2026042801_add_dual_track_columns.sql  2026050501_extend_users_academic.sql  2026050502_create_follows.sql  2026050503_create_notifications.sql  2026050504_add_post_content_type.sql  (+4 more)
(+2850 files in other folders)
