[workspace]
members = ["crates/*"]
resolver = "2"
default-members = ["crates/api"]

[workspace.package]
version = "2.0.0"
edition = "2021"

[workspace.dependencies]
# Web 框架
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br"] }
hyper = "1.8"
hyper-util = "0.1"
async-trait = "0.1"

# 异步运行时
tokio = { version = "1.48", features = ["full"] }

# 数据库
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "ipnetwork"
] }
deadpool-redis = "0.22"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# 认证与安全
jsonwebtoken = "9.3"
argon2 = "0.5"
ammonia = "4.0"

# Markdown 处理
pulldown-cmark = "0.12"

# 工具库
uuid = { version = "1.11", features = ["v4", "serde", "fast-rng"] }
chrono = { version = "0.4.42", features = ["serde"] }
sha2 = "0.10"
validator = { version = "0.20", features = ["derive"] }
time = { version = "0.3", features = ["serde-human-readable"] }

# 日志与监控
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.30"
opentelemetry = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["http-proto", "trace", "reqwest-client"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "trace"] }
http = "1.2"
prometheus = "0.13"
sentry = { version = "0.46", features = ["anyhow", "tracing"] }

# OpenAPI
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# Redis
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# 额外依赖
axum-extra = { version = "0.12", features = ["typed-header", "cookie"] }
base64 = "0.22"
bytes = "1.11"
futures = "0.3"
futures-util = "0.3"
http-body = "1.0"
http-body-util = "0.1"
mime = "0.3"
mime_guess = "2.0"
meilisearch-sdk = "0.28"
pin-project-lite = "0.2"
rustls-pki-types = "1.10"
sync_wrapper = "1.0"
sysinfo = "0.33"
tokio-stream = "0.1"
tower-layer = "0.3"
tower-service = "0.3"

# 测试依赖
axum-test = "18.0"
reqwest = { version = "0.12", features = ["json"] }

# 环境变量加载
dotenv = "0.15"

[workspace.metadata.tarpaulin]
out = ["Html", "Xml"]
output-dir = "./coverage"
exclude-files = ["*/tests/*", "*/benches/*"]
default-includes = ["**/*.rs"]
default-excludes = ["*/tests/*", "*/benches/*"]
targets = ["x86_64-unknown-linux-gnu"]
skip-clean = false
fail-under = 70
timeout = 300
features = "default"
no-default-features = false
all-features = true
workspace = true
