[package]
name = "blog-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "create_admin"
path = "src/bin/create_admin.rs"

[[bin]]
name = "export_openapi"
path = "src/bin/export_openapi.rs"

[dependencies]
# Workspace dependencies
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
deadpool-redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
http = { workspace = true }
prometheus = { workspace = true }
sentry = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
redis = { workspace = true }
validator = { workspace = true }
sha2 = { workspace = true }

# Internal crates
blog-core = { path = "../core" }
blog-db = { path = "../db" }
blog-shared = { path = "../shared" }

# Environment variable loading
dotenv = "0.15"

# Additional dependencies
axum-extra = { workspace = true }
ammonia = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
meilisearch-sdk = { workspace = true }
pin-project-lite = { workspace = true }
rustls-pki-types = { workspace = true }
serde_qs = "0.13"
sync_wrapper = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
# Testing
axum-test = { workspace = true }
reqwest = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }

# Test utilities
mockall = "0.13"
pretty_assertions = "1.4"
serial_test = "3.1"

# Async testing
tokio-test = "0.4"

# UUID for test data generation
uuid = { workspace = true, features = ["v4"] }

# Test coverage
cargo-tarpaulin = "0.31"

# 严格测试所需依赖
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
quickcheck = "1.0"
rand = "0.8"
futures = { workspace = true }
futures-util = { workspace = true }

[features]
default = []
test = []
