[package]
name = "blog-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
sqlx = { workspace = true }
deadpool-redis = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ammonia = { workspace = true }
pulldown-cmark = { workspace = true }
validator = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

# Email
lettre = { version = "0.11", features = ["builder", "tokio1", "smtp-transport", "tokio1-native-tls"] }
tokio = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }

# Internal crates
blog-shared = { path = "../shared" }