[package]
name = "blog-db"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }

# Internal crates
blog-shared = { path = "../shared" }