[package]
name = "blog-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker"
path = "src/main.rs"

[[bin]]
name = "cdc-worker"
path = "src/cdc_main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
sqlx = { workspace = true }
deadpool-redis = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }

# Internal crates
blog-api = { path = "../api" }
blog-core = { path = "../core" }
blog-db = { path = "../db" }
blog-shared = { path = "../shared" }
dotenv = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
