[package]
name = "migrate_mdx"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
anyhow = "1.0"
